fix for ::  row of data at the end of the table is not visible

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -7382,3 +7382,7 @@ tbody {
 .database-table-header-wrapper {
   height: 96px !important;
 }
+
+.toojet-db-table-footer {
+  height: 52px;
+}
